[project]
name = "sample-python"
version = "0.1.0"
description = ""
authors = [
    {name = "Priyagupta108",email = "priyagupta108@github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
